# TravelAgentAI

./: .bedrock_agentcore.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: agent.py  requirements.txt
backend/agents/: __init__.py  destinations_agent.py  financial_agent.py  orchestrator.py  planner_agent.py  weather_agent.py
backend/tools/: __init__.py  climate_scorer_tool.py  destinations_tool.py  flight_search_tool.py  flight_search_tool_online.py  hotel_search_tool.py  hotel_search_tool_online.py  mock_destinations_tool.py  search_tool.py  weather_mcp.py
backend/tools/config/: FinancialAgentResponse.py  FlightOption.py  HotelOption.py  TravelFinancialOption.py  __init__.py  destinations_schema.py  planification_schema.py  weather_schema.py
frontend/: app.py
