[project]
name = "travelagentai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "pydantic>=2.12.5",
    "strands-agents>=1.33.0",
    "strands-agents-evals>=0.1.11",
    "strands-agents-tools>=0.2.23",
    "streamlit>=1.55.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.uv]
package = false
